--- a/运行说明.md
+++ b/运行说明.md
@@ -112,7 +112,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
   }
   ```
 
-- 配置UserFilter拦截器
+- 配置UserFilter拦截器【可自定义】
 
   ```java
   		@Bean
@@ -197,6 +197,8 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 - 配置clickhouse，mdc，workerPath(应用名)
 
+- 考虑是否修改入参数据格式【可自定义】
+
 
 
 注：配置后在ETCD侧，会在worker启动时存放worker的ip和端口，格式如下
@@ -211,4 +213,14 @@ VALUE
 ```
 
 然后客户端Client-Demo会在启动的候，从配置中心获取worker的ip集合。
+
+
+## 自定义说明
+
+- 请求出入参抓取类  UserInterceptor
+  - 默认抓取所有请求入参和出参
+  - 用户可定义拓展点TracerBeanAttrExt，增加抓取参数
+- 数据入库类 TracerConsumer
+  - 拥有默认格式
+  - 用户可自定义拓展点TracerConsumerExt，规定数据库clickhouse入参
 
