运行说明修改

--- a/运行说明.md
+++ b/运行说明.md
@@ -1,8 +1,7 @@
 ### 安装概要
 
-- 在etcd下载页面下载对应操作系统的etcd，[https://github.com/etcd-io/etcd/releases](https://gitee.com/link?target=https%3A%2F%2Fgithub.com%2Fetcd-io%2Fetcd%2Freleases) 使用3.4.x以上。相关搭建细节
+- 参照example项目，启动引入了client.jar的client。 （目前支持file,zk,apolo,etcd,nacos等配置器，file配置器需重写putconfig用以维护worker）
 - 启动worker
-- 启动client
 - 启动DashBoard
 
 
@@ -15,7 +14,7 @@ export MYSQL_HOST = test
 export MYSQL_USER	user
 export MYSQL_PASS	pass
 export INSERT_INTERVAL	1
-export etcdServer	http://127.0.0.1:2379,http://127.0.0.1:xxxx
+export serverAddr	http://127.0.0.1:2379,http://127.0.0.1:xxxx
 export BATCH_SIZE	7000
 export MYSQL_PORT	8123
 export NODE_NUMBER	15
@@ -79,7 +78,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 `JLog`总结了常用的日志参数，在Client端用**规范**的格式记录参数  (具体记录逻辑可见`UserFIlter`类) 。在Worker端，针对定义的日志格式又有一些特殊处理（具体见`TracerConsumer`类）再入库。**那如何自定义日志记录格式和处理入库格式呢？**
 
-- 仿照`UserFIlter`自定义日志**记录格式**， 修改放入传输对象`tracerBean`的元素逻辑
+- 仿照`HttpFIlter`自定义日志**记录格式**， 修改放入传输对象`tracerBean`的元素逻辑
 - 仿照`TracerConsumer`自定义日志**入库格式**, 修改中途日志(`dealTracerLog`) /  出入参日志(`dealFilterModel`)的 入库对象构造方法
 - 可能涉及更改`DashBoard`项目的**展示逻辑**
 
@@ -93,7 +92,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 - 配置ETCD
 
-  构建TracerClientStarter,   设置etcd，应用名，mdc(机房名, 可有可无)
+  构建TracerClientStarter,   设置配置器，应用名
 
   ```java
   @Configuration
@@ -105,8 +104,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
       @PostConstruct
       public void begin() {
           TracerClientStarter tracerClientStarter = new TracerClientStarter.Builder()
-                  .setAppName("demo")
-                  .setEtcdServer(etcdServer).build();
+                 
           tracerClientStarter.startPipeline();
       }
   }
@@ -118,11 +116,11 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
   		@Bean
       public FilterRegistrationBean urlFilter() {
           FilterRegistrationBean registration = new FilterRegistrationBean();
-          UserFilter userFilter = new UserFilter();
+          HttpFilter userFilter = new HttpFilter();
   
           registration.setFilter(userFilter);
           registration.addUrlPatterns("/*");
-          registration.setName("UserTraceFilter");
+          registration.setName("HttpTraceFilter");
           registration.setOrder(1);
           return registration;
       }
