压缩代码调整，自定义配置器编写，使用说明编写

--- a/使用说明.md
+++ b/使用说明.md
@@ -1,8 +1,19 @@
 ### 安装概要
 
-- 参照example项目，启动引入了client.jar的client。 （目前支持file,zk,apolo,etcd,nacos等配置器，file配置器需重写putconfig用以维护worker）
-- 启动worker
-- 启动DashBoard
+
+* 启动worker
+   * 启动worker，开启接收data
+   * 自动上报地址到配置中心
+   * 内部使用Disruptor并行处理存储
+   * 批量插入，建议给worker分配充足内存，不使用连接池。ck的连接数很宝贵
+
+* 参照example项目，启动引入了client.jar的client。
+   *  udp发送的数据都是经过zstd压缩的
+   *  如果未配置workers，则向本地发送数据（用于测试）
+   *  目前支持file,zk,apolo,etcd,nacos配置器, 支持自定义配置器，满足spi
+   *  file配置器需重写putConfig用以维护worker
+   
+* 启动DashBoard
 
 
 
@@ -76,7 +87,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 
 
-`JLog`总结了常用的日志参数，在Client端用**规范**的格式记录参数  (具体记录逻辑可见`UserFIlter`类) 。在Worker端，针对定义的日志格式又有一些特殊处理（具体见`TracerConsumer`类）再入库。**那如何自定义日志记录格式和处理入库格式呢？**
+`JLog`总结了常用的日志参数，在Client端用**规范**的格式记录参数  (具体记录逻辑可见`HttpFIlter`类) 。在Worker端，针对定义的日志格式又有一些特殊处理（具体见`TracerConsumer`类）再入库。**那如何自定义日志记录格式和处理入库格式呢？**
 
 - 仿照`HttpFIlter`自定义日志**记录格式**， 修改放入传输对象`tracerBean`的元素逻辑
 - 仿照`TracerConsumer`自定义日志**入库格式**, 修改中途日志(`dealTracerLog`) /  出入参日志(`dealFilterModel`)的 入库对象构造方法
@@ -88,9 +99,9 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 
 
-### Client Demo运行
+### Client example运行
 
-- 配置ETCD
+- 配置配置器
 
   构建TracerClientStarter,   设置配置器，应用名
 
@@ -98,22 +109,19 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
   @Configuration
   public class DemoConfig {
   
-      @Value("${config.server}")
-      private String etcdServer;
-  
       @PostConstruct
       public void begin() {
           TracerClientStarter tracerClientStarter = new TracerClientStarter.Builder()
-                 
+          // mdc   tagConfig       
           tracerClientStarter.startPipeline();
       }
   }
   ```
 
-- 配置UserFilter拦截器
+- 配置HttpFilter拦截器
 
   ```java
-  		@Bean
+        @Bean
       public FilterRegistrationBean urlFilter() {
           FilterRegistrationBean registration = new FilterRegistrationBean();
           HttpFilter userFilter = new HttpFilter();
@@ -143,6 +151,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
           <Root level="INFO" includeLocation="false"></Root>
       </Loggers>
   ```
+  自定义配置器参照CustomConfigurator类（基于redis实现的配置器例子）
 
 - 测试记录出入参
 
@@ -162,15 +171,14 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
        */
       private static Logger RequestLog = LoggerFactory.getLogger("RequestLog");
   
-      @RequestMapping("/index")
-      public Object index() {
-          TracerBean tracerBean = new TracerBean();
-          tracerBean.setTracerId("11111");
-  
-          RequestLog.info("test");
-  
-          return tracerBean;
-      }
+     @PostMapping(value = "/test", consumes = MediaType.APPLICATION_JSON_VALUE)
+     public Object test(@RequestParam Integer uid, @RequestParam Integer newKey,@RequestBody TestReq req) {
+        RequestLog.info("|errno=val3||node=val4||这是随便的log|");
+        if(newKey == 1){
+            return 1;
+        }
+        return "滴滴员工tangbohu的终身代号是什么？？？是9527";
+    }
   
   }
   ```
@@ -182,31 +190,8 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
   模拟`UserFilter发`送构造好的出入参数据，udp发送给worker。可外嵌层for循环用于压测，详见`TracerPacketTest`类。
 
 
+- clickhouse sql： worker服务下jlog.sql
 
-# worker运行
-
-- 配置ETCD
-
-  同上
-
-- 配置日志框架 (`log4j / log4j2 / logback`)
-
-  同上
-
-- 配置clickhouse，mdc，workerPath(应用名)
-
-
-
-注：配置后在ETCD侧，会在worker启动时存放worker的ip和端口，格式如下
-
-```ABAP
-KEY
-/userTracer/workers/{workerPath}/{mdc}/hostName
-/userTracer/workers/{workerPath}/hostName
-
-VALUE
-127.0.0.1:8080
-```
-
-然后客户端Client-Demo会在启动的候，从配置中心获取worker的ip集合。
+- clickhouse存储样例：
+![输入图片说明](tracer_log.png)
 
