删除resp字符串 全部压缩，增加req存储，增加自定义参数转tag，增加基于redis的配置器，

--- a/使用说明.md
+++ b/使用说明.md
@@ -103,15 +103,15 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 
 - 配置配置器
 
-  构建TracerClientStarter,   设置配置器，应用名
+  构建TracerClientStarter, 设置配置器，应用名
 
   ```java
   @Configuration
-  public class DemoConfig {
+  public class Starter {
   
       @PostConstruct
       public void begin() {
-          TracerClientStarter tracerClientStarter = new TracerClientStarter.Builder()
+          TracerClientStarter tracerClientStarter = new TracerClientStarter.Builder();
           // mdc   tagConfig       
           tracerClientStarter.startPipeline();
       }
@@ -121,7 +121,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 - 配置HttpFilter拦截器
 
   ```java
-        @Bean
+      @Bean
       public FilterRegistrationBean urlFilter() {
           FilterRegistrationBean registration = new FilterRegistrationBean();
           HttpFilter userFilter = new HttpFilter();
@@ -133,6 +133,44 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
           return registration;
       }
   ```
+
+- 自定义出参/入参增强（可选）
+
+  ```java
+      public class CustomRespMap implements RespMap {
+      
+          @Override
+          public Map<String, Object> appendRespMap(String cnt) {
+              
+              return FastJsonUtils.toMap(cnt);
+          }
+      }
+  ```
+
+- 自定义配置器（可选，如果没有配置中心才需要）
+
+  ```java
+      @Component
+      public class CustomConfigurator extends FileConfigurator {
+    
+          private CustomConfigurator() throws IOException {
+              super();  
+              cover(this);
+          }
+            
+          @Override
+          public List<String> getList(String key) {
+              Set<Object> set = redisUtil.getMembers(key);
+              return set.stream().map(v->(String)v).collect(Collectors.toList());
+          }
+            
+          @Override
+          public String getType() {
+              return "custom-redis";
+          }
+      
+      }
+  ```  
 
 - 配置日志框架 (log4j / log4j2 / logback)
 
@@ -177,7 +215,7 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
         if(newKey == 1){
             return 1;
         }
-        return "滴滴员工tangbohu的终身代号是什么？？？是9527";
+        return new Resoponse("滴滴员工tangbohu的终身代号是什么？？？是9527");
     }
   
   }
