--- a/使用说明.md
+++ b/使用说明.md
@@ -1,25 +1,20 @@
 ### 安装概要
 
-* 使用docker安装clickhouse（docker安装参考：https://www.runoob.com/docker/docker-tutorial.html）
+* 安装clickhouse（docker安装参考：https://www.runoob.com/docker/docker-tutorial.html）
    * 拉取镜像：docker pull yandex/clickhouse-server
-   * 拉取镜像：docker pull yandex/clickhouse-client
    * 启动ck docker run -d --name ch-server --ulimit nofile=262144:262144 -p 8123:8123 -p 9000:9000 -p 9009:9009 yandex/clickhouse-server
    * 使用Dbeaver测试连接：clickhouse默认用户名是defult 没有密码
-   * 建表：[sql](https://gitee.com/jd-platform-opensource/jlog/blob/master/worker/src/main/resources/jlog.sql)
+   * 建表：[sql语句](https://gitee.com/jd-platform-opensource/jlog/blob/master/worker/src/main/resources/jlog.sql)
 
 * 启动worker
-   * 配置ck地址，从config模块选择配置中心[apollo.zk.etcd.nacos]，
-               并在application.yml/propertires文件 ，如serverAddr=127.0.0.1:2181；参考example项目application.properties
+   * 配置ck地址，从config模块引入配置器[apollo.zk..，如serverAddr=127.0.0.1:2181；参考example项目application.properties
                如无第三方配置中心则默认file配置器, （生产环境）建议继承FileConfigurator复写以维护worker配置，参考CustomConfigurator.class    
    * 启动worker，开启接收data
-   * 自动上报地址到配置中心
-   * 内部使用Disruptor并行处理存储
-   * 批量插入，建议给worker分配充足内存，不使用连接池。ck的连接数很宝贵
 
 * 启动web服务（client端）参照example项目
    *  根据自己的log框架 引入对应的client.jar。选择对应的log xml配置以及覆写appender。参照3个clientlog*模块，或example-TracerLogbackAppender.class
-   *  在配置文件（选一个）application.yml/application.propertires/jLog.propertires/其他配置中心 配置压缩提取等配置 
-                      参考example项目application.properties
+   *  在配置文件application.yml/application.propertires/jLog.propertires/其他配置中心 配置压缩提取等配置 
+                参考example项目application.properties
    *  如果未配置workers，则向本地发送数据（用于测试）
    *  如有需要可自定义额外的出参入参提取，实现RespMap/ReqMap即可，参照CustomRespMap.class
    *  启动项目，用PostMan等工具调用TestController/test 接口，
