--- a/使用说明.md
+++ b/使用说明.md
@@ -7,16 +7,13 @@
    * 建表：[sql语句](https://gitee.com/jd-platform-opensource/jlog/blob/master/worker/src/main/resources/jlog.sql)
 
 * 启动worker
-   * 配置ck地址，从config模块引入配置器[apollo.zk..，如serverAddr=127.0.0.1:2181；参考example项目application.properties
-               如无第三方配置中心则默认file配置器, （生产环境）建议继承FileConfigurator复写以维护worker配置，参考CustomConfigurator.class    
+   * 配置ck地址，从config模块引入配置器，参考example项目application.properties。默认file配置器, （生产环境）建议继承FileConfigurator复写以维护worker配置，参考CustomConfigurator.class    
    * 启动worker，开启接收data
 
 * 启动web服务（client端）参照example项目
    *  根据自己的log框架 引入对应的client.jar。选择对应的log xml配置以及覆写appender。参照3个clientlog*模块，或example-TracerLogbackAppender.class
-   *  在配置文件application.yml/application.propertires/jLog.propertires/其他配置中心 配置压缩提取等配置 
-                参考example项目application.properties
+   *  在配置文件或其他配置中心 配置好压缩提取等配置 参考example项目application.properties
    *  如果未配置workers，则向本地发送数据（用于测试）
-   *  如有需要可自定义额外的出参入参提取，实现RespMap/ReqMap即可，参照CustomRespMap.class
    *  启动项目，用PostMan等工具调用TestController/test 接口，
    *  Dbeaver 查看数据
    
