--- a/使用说明.md
+++ b/使用说明.md
@@ -1,4 +1,8 @@
+
+
 ### 安装概要
+
+有疑问可以进微信群咨询。
 
 * 安装clickhouse（docker安装参考：https://www.runoob.com/docker/docker-tutorial.html）
    * 拉取镜像：docker pull yandex/clickhouse-server
