--- a/使用说明.md
+++ b/使用说明.md
@@ -7,7 +7,7 @@
 * 安装clickhouse（docker安装参考：https://www.runoob.com/docker/docker-tutorial.html）
    * 拉取镜像：docker pull yandex/clickhouse-server
    * 启动ck docker run -d --name ch-server --ulimit nofile=262144:262144 -p 8123:8123 -p 9000:9000 -p 9009:9009 yandex/clickhouse-server
-   * 使用Dbeaver测试连接：clickhouse默认用户名是defult 没有密码
+   * 使用Dbeaver测试连接：clickhouse默认用户名是default 没有密码
    * 建表：[sql语句](https://gitee.com/jd-platform-opensource/jlog/blob/master/worker/src/main/resources/jlog.sql)
 
 * 启动worker
