图片换个位置

--- a/使用说明.md
+++ b/使用说明.md
@@ -239,5 +239,5 @@ java -jar $JAVA_OPTS $JAVA_ENV xxx.jar --etcd.server=${etcdServer}
 - clickhouse sql： worker服务下jlog.sql
 
 - clickhouse存储样例：
-![输入图片说明](tracer_log.png)
+![输入图片说明](images/tracer_log.png)
 
